grid links and cards

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -21,13 +21,14 @@ en:
     links: 
     - name: B. Amsterdam <br>
             763a Johan Huizingalaan,
-            1066&nbsp;VH, Amsterdam, NL
+            1066&nbsp;VH, Amsterdam,&nbsp;NL
       url: https://goo.gl/maps/rG7iEz6UKNA3B2iPA
   - heading: P.O. Box
     links: 
     - name: Theeta B.V. <br>
             Postbus 321, <br>
-            0000&nbsp;GC, Houten, NL
+            3990&nbsp;GC, Houten, NL
+            Theeta B.V.
       url: 
   footnote: 
   credits: > 
