--- a/_data/index.yml
+++ b/_data/index.yml
@@ -9,6 +9,10 @@ en:
       text: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima, enim dolores! Corrupti, est alias, placeat voluptate dicta quo amet ratione doloremque.
       url: 
     - label: Contact us
-      title: Get in touch for collaboration
+      title: Collaborate with us
+      text: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima, enim dolores! Corrupti, est alias, placeat voluptate dicta quo amet ratione doloremque.
+      url: 
+    - label: Careers
+      title: Work at Theeta
       text: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima, enim dolores! Corrupti, est alias, placeat voluptate dicta quo amet ratione doloremque.
       url: 
