--- a/_data/brands.yml
+++ b/_data/brands.yml
@@ -14,7 +14,7 @@ en:
     tags: Dininfectant, H₂O₂, Argentum, hospitals, cooling towers, wastewater
     url: sanosil
   - name: Miravento
-    logo: https://theeta.nl/images/Miravento-Logo-Horiznotal-Lockup-with-Flag.svg 
+    logo: /assets/logo-miravento-dark.svg
     cover: /assets/vineyards.jpg
     item: /assets/miravento-moscato-bottles.png
     intro: Starting in 2022, Theeta introduced Cantina Vallebelbo's Miravento Line of wines to the European market. A delightful selection of high-quality Italian sparkling wines, appropriate for any occasion. The expanding range stars Moscato d’Asti DOCG, Moscato Spumante Rosé, and Prosecco DOC.
