--- a/_data/brands.yml
+++ b/_data/brands.yml
@@ -1,14 +1,14 @@
 en: 
   - name: Beckher
     logo: /assets/beckher-logo-horizontal-gradient-orange.png
-    cover: https://theeta.nl/images/beckher-bg.jpg
+    cover: /assets/beckher-bg.jpg
     item: /assets/large charger lamp w floating phone.png
     intro: Between overseeing the production of our own brand of appliances, Beckher, and helping existing brands, like Sanosil and Miravento, expand with the help of our network, we seize opportunities in multiple sectors and always aim high.
     tags: Domestic Appliances, Own brand
     url: beckher
   - name: Sanosil
-    logo: https://theeta.nl/images/Sanosil_Logo.png
-    cover: https://theeta.nl/images/samara-doole-peaTniZsUQs-unsplash.jpg
+    logo: assets/sanosil_logo.png
+    cover: /assets/sanosil-bg.jpg
     item: /assets/Sanosil-Super-25-Ag-5-kg.png
     intro: The innovative Sanosil chemical disinfectants are highly effective, non-polluting solutions that eradicate microorganisms without affecting the container they clean (active imgredients, H₂O₂ and trace amounts of Ag). Theeta is the exclusive distributor of Sanosil products to businesses in Greece and Cyprus.
     tags: Dininfectant, H₂O₂, Argentum, hospitals, cooling towers, wastewater
