--- a/_data/navlinks.yml
+++ b/_data/navlinks.yml
@@ -9,10 +9,10 @@ en:
   navlinks:
     - title: About
       url: about
+    - title: Clients
+      url: clients
     - title: News
       url: news
-    - title: Careers
-      url: careers
 nl: 
   brands:
     - title: Beckher
@@ -24,7 +24,22 @@ nl:
   navlinks:
     - title: Over ons
       url: about
+    - title: Cliënten
+      url: clients
     - title: Nieuws
       url: news
-    - title: Carrières
-      url: careers
+el: 
+  brands:
+    - title: Beckher
+      url: beckher
+    - title: Sanosil
+      url: sanosil
+    - title: Miravento
+      url: miravento
+  navlinks:
+    - title: Εταιρεία
+      url: about
+    - title: Πελάτες
+      url: clients
+    - title: Νέα
+      url: news
