--- a/_data/brands.yml
+++ b/_data/brands.yml
@@ -1,8 +1,8 @@
 en: 
   - name: Beckher
     logo: /assets/beckher-logo-horizontal-gradient-orange.png
-    cover: /assets/beckher-bg.jpg
-    item: /assets/large charger lamp w floating phone.png
+    cover: /assets/abstract-bg-2.jpg
+    item: /assets/beckher-kettle-HOT-W20.png
     intro: With its own brand and production, Beckher delivers trustworthy small domestic appliances to customers through close partnerships with some of the largest retail stores in Europe. 
     tags: Domestic Appliances, Own brand
     url: beckher
