--- a/_data/brands.yml
+++ b/_data/brands.yml
@@ -20,7 +20,7 @@ en:
   - name: Miravento
     logo: /assets/logo-miravento-dark.svg
     cover: /assets/vineyards.jpg
-    item: /assets/miravento-moscato-bottles.png
+    item: /assets/miravento-trio.png
     intro: Starting in 2022, Theeta introduced Cantina Vallebelbo's Miravento Line of wines to the European market. A delightful selection of high-quality Italian sparkling wines, appropriate for any occasion. The expanding range stars Moscato d’Asti DOCG, Moscato Spumante Rosé, and Prosecco DOC.
     tags: moscato d’asti, prosecco, italian wine, white wine
     url: miravento
