--- a/_data/index.yml
+++ b/_data/index.yml
@@ -9,7 +9,7 @@ en:
       text: Find important company announcements, press releases, and breaking industry news here.
       url: news
     - label: Contact
-      title: Collaborate with us
+      title: Collaborate with&nbsp;us
       text: We work tirelessly to introduce and promote promising brands in our markets. Need a partner for European distribution? We are here for you.
       url: contact
     - label: Careers
